cmd/config/udn-cnc/service.yml
kind: Service
apiVersion: v1
metadata:
  name: cnc-svc
spec:
  selector:
    app: nginx
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
