cmd/config/udn-cnc/np-allow-cnc-egress.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-client-egress
spec:
  podSelector:
    matchLabels:
      app: client
  egress:
  - to: []
    ports:
    - protocol: TCP
      port: 8080
  - to: []
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
  policyTypes:
  - Egress
