cmd/config/udn-cnc/np-allow-cnc-ingress.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-nginx-ingress
spec:
  podSelector:
    matchLabels:
      app: nginx
  ingress:
  - ports:
    - protocol: TCP
      port: 8080
  policyTypes:
  - Ingress
