cmd/config/udn-cnc/np-deny-all.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all
spec:
  podSelector: {}
  ingress: []
  policyTypes:
  - Ingress
